Moved the camera to the right so the origin is centered in the play area
Moved the laser behind the medium
Added transparency to the mediums
Improved colors for large indices of refraction
Added tick marks to the index of refraction sliders
Fixed: sim should start with laser off
Added a line that will show the border between the mediums even when both n's are the same
Fixed: laser on/off button does not switch images right now
Fixed: The laser beam could be a little thicker, maybe 2x what it is now?
# 0.00.04 (48679) Feb 5, 2011
Added developer controls for colors
Show intensity on intensity meter
Added ray absorption by the intensity meter
# 0.00.03 (48667) Feb 5, 2011
Added a close button to the intensity meter
Added an intensity meter
Added power button to the laser
Added model for transmitted and reflected power
Added protractor based on image
Added control panels
Added "Show Normal"
Added control panel for indices of refraction
Added Snell's Law
Constrained the laser angle
Fixed: centered light output on front of laser node
# 0.00.02 (48638) Feb 4, 2011
# 0.00.01 (48635) Feb 4, 2011
Added images from NP
Added on/off button for laser
Initial support for model and view, canvas, application, etc.