@@ -1,3 +1,4 @@
+Made the protractor draggable
 Moved the camera to the right so the origin is centered in the play area
 Moved the laser behind the medium
 Added transparency to the mediums
